--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -61,3 +61,12 @@
   color: var(--color-error);
   padding-left: 0.3rem;
 }
+.fadeOut {
+  -webkit-mask-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(0, 0, 0, 1)),
+    to(rgba(0, 0, 0, 0))
+  );
+}
