--- a/web/src/assets/base.css
+++ b/web/src/assets/base.css
@@ -45,6 +45,7 @@
 */
 
 :root {
+  --color-background-dark: #111;
   --color-background: var(--vt-c-black);
   --color-background-soft: var(--vt-c-black-soft);
   --color-background-mute: var(--vt-c-black-mute);
